log
Sat, Apr 19, 2025  3:06:17 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  3:15:27 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map;
            ^~~
cc1.exe: all warnings being treated as errors
c67504f
Sat, Apr 19, 2025  3:16:07 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b88312c
